# merco-agents

./: Cargo.toml  README.md  agent_memory.db
examples/: README.md
examples/advanced_streaming_tools/: Cargo.toml  env_template
examples/advanced_streaming_tools/src/: main.rs
examples/basic_agent/: Cargo.toml  env_template
examples/basic_agent/src/: main.rs
examples/basic_streaming/: Cargo.toml
examples/basic_streaming/src/: main.rs
examples/basic_streaming_tools/: Cargo.toml
examples/basic_streaming_tools/src/: main.rs
examples/granular_streaming_tools/: Cargo.toml  env_template
examples/granular_streaming_tools/src/: main.rs
examples/json_validation/: Cargo.toml
examples/json_validation/src/: main.rs
examples/multi_agent/: Cargo.toml
examples/multi_agent/src/: main.rs
examples/output_formats/: Cargo.toml
examples/output_formats/src/: main.rs
examples/real_streaming/: Cargo.toml
examples/real_streaming/src/: main.rs
examples/simple_streaming/: Cargo.toml  env_template
examples/simple_streaming/src/: main.rs
examples/streaming_agent/: Cargo.toml  env_template
examples/streaming_agent/src/: main.rs
examples/streaming_error_handling/: Cargo.toml
examples/streaming_error_handling/src/: main.rs
examples/streaming_performance_test/: Cargo.toml
examples/streaming_performance_test/src/: main.rs
examples/tool_usage/: Cargo.toml
examples/tool_usage/src/: main.rs
src/: lib.rs  main.rs
src/agent/: agent.rs  agent_constructors.rs  agent_execution.rs  agent_management.rs  agent_prompts.rs  mod.rs  output_handler.rs  provider.rs  role.rs  state.rs  streaming.rs
src/memory/: config.rs  memory_manager.rs  mod.rs
src/memory/embedding/: custom.rs  huggingface.rs  mod.rs  ollama.rs  openai.rs  types.rs
src/memory/manager/: agent_memory.rs  mod.rs
src/memory/storage/: mod.rs
src/memory/tests/: config_tests.rs  embedding_tests.rs  manager_tests.rs  mod.rs  test_utils.rs  types_tests.rs
src/memory/types/: episodic.rs  mod.rs  procedural.rs  semantic.rs  working.rs
src/task/: task.rs
