[package]
name = "merco-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
merco-llmproxy = { path = "../merco-llmproxy" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
ctor = "0.4.2"
thiserror = "1.0"

# HTTP client for embedding providers
reqwest = { version = "0.11", features = ["json"] }

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "json", "chrono", "uuid"] }

# Vector database support  
qdrant-client = { version = "1.9" }

# HuggingFace tokenizers and embeddings (disabled due to rand version conflicts with candle)
# Enable these when dependency conflicts are resolved:
# candle-core = { version = "0.4" }
# candle-nn = { version = "0.4" }
# candle-transformers = { version = "0.4" }
# tokenizers = { version = "0.15" }

# Configuration
config = "0.14"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"