[package]
name = "merco-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
merco-llmproxy = { git = "https://github.com/cognilexa/merco-llmproxy" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
ctor = "0.4.2"
thiserror = "1.0"

# HTTP client for potential future use
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"