[package]
name = "basic_streaming_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
merco-agents = { path = "../../" }
merco-llmproxy = { git = "https://github.com/cognilexa/merco-llmproxy" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ctor = "0.2"
