[package]
name = "granular_streaming_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
merco-agents = { path = "../../" }
merco-llmproxy = { git = "https://github.com/cognilexa/merco-llmproxy" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctor = "0.2"
