[package]
name = "output_formats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "output_formats"
path = "src/main.rs"

[dependencies]
merco-agents = { path = "../../" }
merco-llmproxy = { git = "https://github.com/cognilexa/merco-llmproxy" }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
