[package]
name = "tool_usage"
version = "0.1.0"
edition = "2021"

[dependencies]
merco-agents = { path = "../.." }
merco-llmproxy = { path = "../../../merco-llmproxy" }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ctor = "0.4.2"
